--- a/page1.html
+++ b/page1.html
@@ -29,12 +29,12 @@
 <body> The dataset ‘G07’ is about an individual’s indigenous status by age and by sex.</body>
 <br>
 <br>
-<img src="file:///C:/Users/kkjou/Desktop/Tester/CODE1230/Assignment%202/Website/Images/Population.JPG" alt="image missing" style="width:55%"/>
+<img src="file:///C:/Users/kkjou/Documents/GitHub/CODE1230.2/Images/Population.JPG" alt="image missing" style="width:55%"/>
 <br><br>
 <body>The darker the blue, the greater the number of male and female Indigenous people are residing in the area.</body>
 <br><br><br><br>
 <footer>
-<a href="https://github.com/"> Alan Nguyen </a> and <a href="https://github.com/miragemoon"> Karen Kuan </a>
+<a href="https://github.com/icecreamWaffles"> Alan Nguyen </a> and <a href="https://github.com/miragemoon"> Karen Kuan </a>
 </footer>
 
 </body>
