--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <h1> CODE1230 Urban Modelling - Data Set G07 </h1>
 
 <footer>
-<a href="https://github.com/"> Alan Nguyen </a> and <a href="https://github.com/miragemoon"> Karen Kuan </a>
+<a href="https://github.com/IcecreamWaffles"> Alan Nguyen </a> and <a href="https://github.com/miragemoon"> Karen Kuan </a>
 </footer>
 
 </body>
