--- a/page1.html
+++ b/page1.html
@@ -34,7 +34,7 @@
 <body>The darker the blue, the greater the number of male and female Indigenous people are residing in the area.</body>
 <br><br><br><br>
 <footer>
-<a href="https://github.com/icecreamWaffles"> Alan Nguyen </a> and <a href="https://github.com/miragemoon"> Karen Kuan </a>
+<a href="https://github.com/IcecreamWaffles"> Alan Nguyen </a> and <a href="https://github.com/miragemoon"> Karen Kuan </a>
 </footer>
 
 </body>
