--- a/page6.html
+++ b/page6.html
@@ -29,7 +29,7 @@
 <body> Closer examination reveals that majority of Sydney CBD is unoccupied by<br> indigenous individuals as depicted in Images 1, 2, 3, and 4. They instead occupy low<br> density regions such as western and south west suburbs.<br><br>
 </body>
 
-<img src="file:///C:/Users/kkjou/Desktop/Tester/CODE1230/Assignment%202/Website/Images/Q6i.JPG" alt="image missing" style="width:60%"/> <br>
+<img src="file:///C:/Users/kkjou/Documents/GitHub/CODE1230.2/Images/Q6i.JPG" alt="image missing" style="width:60%"/> <br>
 
 <img src="file:///C:/Users/kkjou/Desktop/Tester/CODE1230/Assignment%202/Website/Images/Q6ii.JPG" alt="image missing" style="width:60%"/> <br>
 
