--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
  <a href="page1.html">Q9</a>
  <a href="page1.html">Q10</a>
  <a href="page1.html">Q11</a>
+ <a href="map.html">Map</a>
  <li style="float:right"><a class="active" href="index.html">Home</a></li>
  </div>
 
