--- a/page6.html
+++ b/page6.html
@@ -21,6 +21,8 @@
  <a href="page9.html">Q9</a>
  <a href="page10.html">Q10</a>
  <a href="page11.html">Q11</a>
+ <a href="map.html">Map</a>
+
  <li style="float:right"><a class="active" href="index.html">Home</a></li>
  </div>
 
