--- a/page1.html
+++ b/page1.html
@@ -21,6 +21,7 @@
  <a href="page9.html">Q9</a>
  <a href="page10.html">Q10</a>
  <a href="page11.html">Q11</a>
+ <a href="map.html">Map</a>
  <li style="float:right"><a class="active" href="index.html">Home</a></li>
  </div>
 
@@ -29,7 +30,7 @@
 <body> The dataset ‘G07’ is about an individual’s indigenous status by age and by sex.</body>
 <br>
 <br>
-<img src="file:///C:/Users/kkjou/Documents/GitHub/CODE1230.2/Images/Population.JPG" alt="image missing" style="width:55%"/>
+<img src="file:///C:/Users/kkjou/Documents/GitHub/CODE1230.2/Population.JPG" alt="image missing" style="width:55%"/>
 <br><br>
 <body>The darker the blue, the greater the number of male and female Indigenous people are residing in the area.</body>
 <br><br><br><br>
